fix: changed font color  and spacing of rsvp

--- a/styles.css
+++ b/styles.css
@@ -421,7 +421,7 @@ li {
 		width: 70%;
 	}
 	.name-input{
-		width: 55%;
+		width: 65%;
 	}
 }
 
